@startuml

class Banco{
    - nombre : String
    + trasferir (clienteOrigen: Cliente, origen: clienteDestino: Cliente,
    Cuenta, destino; Cuenta, monto: float)

}
class Cliente{
    - nombre : String
}

class Cuenta{
    - numero: String
    + depositar (monto: float)
    + retirar(monto: float)
}

class Transacción {
    - monto: float
    - fecha<:

}

Banco --> "*" Cliente : -clientes
Cliente --> "*" Cuenta: -cuentas
Cuenta <- "*" Transacción: -cuenteaDestino
Cuenta <- "*" Transacción: -cuentaOrigen

Banco -> "*" Transacción: -transacciones

@enduml